--- a/Lecture 3/styles.css
+++ b/Lecture 3/styles.css
@@ -2,11 +2,7 @@ body{background-color: navy blue}
 
 p{color: gold}
 
-.purpletext{
-  color: purple
-  font-size: 18pt
-  font-weight:bold;
-}
+.purpletext{color: purple}
 
 #MyfirstID{color: red}
 
