--- a/Lecture 4/Challenge style.css
+++ b/Lecture 4/Challenge style.css
@@ -5,3 +5,9 @@
 .border2{border-style: dashed; color: green}
 
 .border3{border-style: dashed; color: white}
+
+img{
+  padding: 300;
+  margin: 230;
+  
+}
